Fixing properties and import/export button overlap on ios

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -43,6 +43,7 @@ h1 {
     "top"
     "left"
     "right";
+  grid-template-rows: auto 1fr auto;
   justify-content: center;
   gap: 4px;
 }
@@ -67,25 +68,30 @@ h1 {
 
 .canvas-mapper {
   grid-area: left;
+  display: flex;
+  align-items: stretch;
 }
 
 .canvas-wrapper {
-  display: block;
-  margin: auto;
-  height: 100%;
-  min-height: 400px;
+  display: flex;
+  align-items: stretch;
+  flex: 1;
 }
 
 #workspace {
   border: var(--border);
   display: block;
-  width: 100%;
+  max-width: 100%;
   min-height: 300px;
-  height: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  flex: 1;
   padding-left: 0;
   padding-right: 0;
+}
+
+@media screen and (min-width: 768px) {
+  #workspace {
+    min-height: 400px;
+  }
 }
 
 #importFile {
